# convexhull-rs

./: Cargo.toml
crates/convexhull/: Cargo.toml
crates/convexhull/src/: lib.rs
src/: convex_hull_kd.rs  main.rs
